Temporary fix of the header z-index issue

--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
     align-items: center;
 
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
 
